# manga_cleaner

./: .gitignore  Cargo.toml  README.md  agents.md  process_manga.py  process_manga_ui.py
icon/: manga_cleaner_native.icns
old/: cover_image.py  rename.py
old_python/old/: split_series.py
scripts/: macos_build_app.sh  macos_make_icns.sh
src/: lib.rs  main.rs
