[package]
name = "manga_cleaner_native"
version = "0.1.0"
edition = "2021"

[lib]
name = "manga_cleaner"
path = "src/lib.rs"

[[bin]]
name = "manga_cleaner_native"
path = "src/main.rs"

[[bin]]
name = "process_manga_rs"
path = "src/bin/process_manga_rs.rs"

[dependencies]
ab_glyph = "0.2"
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
iced = { version = "0.12", features = ["image", "tokio"] }
image = { version = "0.25", features = ["jpeg", "png", "webp", "bmp", "gif"] }
imageproc = "0.25"
libc = "0.2"
natord = "1"
once_cell = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rfd = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
